--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,11 +6,9 @@
         <h2>Make a Burger</h2>
         <panel>
             <form action="/api/burgers" method="POST">
-                <div class="form-group">
-                    <label for="new-burger" id="color-override">New Burger:</label>
+                    <label for="new-burger">New Burger:</label>
                     <input type="text" id="newburger" name="burger_name" value="">
-                    <button type="submit" class="btn btn-success" id="addburger"><span class="fa fa-thumbs-up"></span></button>
-                </div>
+                    <button type="submit" class="btn btn-success" ><span class="fa fa-thumbs-up"></span></button>
             </form>
         </panel>
     </div><!-- /jumbotron -->
@@ -18,13 +16,13 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="panel panel-default">
-                <div class="panel-heading" id="lefthead"><strong>New Burgers</strong></div>
+                <div class="panel-heading"><strong>Burgers to Eat</strong></div>
                 <div class="panel-body">
                     <ul>
                         {{#each burgers}}
-                            {{#unless devoured}}
+                            {{#unless this.devoured}}
                                 <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
-                                <button type="button" class="eatburger btn btn-warning" id ="eatbutton" data-id="{{this.id}}" data-newDevoured="{{devour}}"><span class="fa fa-cutlery"></span></button>
+                                <button type="button" class="eat-burger btn btn-warning fa fa-cutlery" data-id="{{this.id}}" data-newDevoured="{{this.devoured}}"></button>
                                 <hr>
                             {{/unless}}
                         {{/each}}
@@ -35,13 +33,13 @@
         <!-- Devoured Burgers -->
         <div class="col-sm-6">
             <div class="panel panel-default">
-                <div class="panel-heading" id="righthead"><strong>Eaten Burgers</strong></div>
+                <div class="panel-heading"><strong>Burgers already Eaten</strong></div>
                 <div class="panel-body">
                     <ul>
                         {{#each burgers}}
-                            {{#if devoured}}
-                                <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
-                                <button type="button" class="btn btn-danger" id ="trashbutton" data-id="{{this.id}}" data-newDevoured="{{devour}}"><span class="fa fa-trash"></span></button>
+                            {{#if this.devoured}}
+                                <h1> {{this.id}} - {{this.burger_name}} </strong></span>
+                                <button type="button" class="trash-burger btn btn-danger fa fa-trash" data-id="{{this.id}}" data-newDevoured="{{this.devoured}}"></button>
                                 <hr>
                             {{/if}}
                         {{/each}}
