--- a/public/assets/css/burg-style.css
+++ b/public/assets/css/burg-style.css
@@ -1,1 +1,44 @@
 
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
+body{
+    padding:30px 0px;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 400px;
+}
+
+input{
+    padding:5px;
+    border-radius: 5px;
+}
+
+ul {
+    list-style: none;
+    margin-top:25px;
+}
+li{
+    display:flex;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width:450px){
+.jumbotron{
+    width:100%;
+}
+form{
+    flex-wrap:wrap!important;
+    justify-content: center;
+}
+input{
+    width:90%;
+}
+}
